tests/rosetta/transpiler/Clojure/catmull-clark-subdivision-surface.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/catmull-clark-subdivision-surface.clj:39:323).
Unable to resolve symbol: getFacePoints_idx in this context

Full report at:
/tmp/clojure-11030386729929470628.edn
